2017-10-13  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* COPYING: Remove internal_com.h entry.

	* misc/internal_com.h: Remove file.

	* misc/network.c (internal_send, internal_recv): Remove message type
	handling.

	* misc/network.h: Adjust function headers.

	* misc/plugutils.c (plug_get_host_fqdn, proto_post_wrapped)
	(plug_get_key): Adjust function calls.
	(plug_fork_child): Send results through global_socket directly.

	* nasl/nasl_builtin_find_service.c (fwd_data), src/attack.c
	(comm_send_status, attack_host), src/hosts.c (forward),
	src/nasl_plugins.c (nasl_thread), src/ntp.c (__ntp_timestamp_scan_host),
	src/pluginlaunch.c (update_running_processes): Adjust function calls.

2017-10-13  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginlaunch.c (plugin_launch): Adjust to set child processes to
	send scan results directly to main scan process instead of passing them
	through parent host process.
	(struct running): Remove internal_soc element.
	(process_internal_msg, wait_for_children, pluginlaunch_child_cleanup)
	(read_running_processes): Remove functions.
	(update_running_processes): Adjust to check if child processes are
	alive.
	(wait_if_simult_ports, next_free_process, pluginlaunch_init)
	(pluginlaunch_wait, pluginlaunch_wait_for_free_process): Don't call
	removed functions.

	* src/nasl_plugins.c (nasl_thread): Don't call removed function.

	* src/pluginlaunch.h: Remove deleted function header.

2017-10-11  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/opevassd.c (stop_all_scans): Remove popen() and get the pids
	reading the /proc directory.

2017-10-10  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/opevassd.c (stop_all_scans): Do not get the group process ID.
	Set the char array size to 8.

2017-10-10  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* src/opevassd.c (stop_all_scans): Evaluate the return code from
	the first fscanf () call.

	* Changelog: Correct log entry email.
